// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNotifications /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-cwSeag boZJxr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      aria-label="Loading"
      class="sc-cwSeag fkzJbZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
      width="default"
    >
      <div
        class="sc-bjfHbI ibzWhy"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI jVoIxg"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI jVoIxg"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI jVoIxg"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI jVoIxg"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with admin user 1`] = `
<div>
  <div
    class="sc-cwSeag boZJxr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div>
      <div
        class="sc-bqWxrE VcTDu"
      >
        <div
          class="sc-kDvujY bJLGdG"
        >
          <a
            class="sc-iBYQkv jNlLug"
            href="/admin"
          >
            ⇠ Admin
          </a>
        </div>
      </div>
      <div
        class="sc-bqWxrE VcTDu"
      >
        <h1
          class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
        >
          Admin notifications
        </h1>
      </div>
    </div>
    <div
      class="sc-hhOBVt"
    >
      <label
        class="sc-iTFTee cgVNkB"
        for="message_FORM_ID"
      >
        Message
      </label>
      <div
        class="sc-gikAfH bJIepj sc-cCjUiG elKIjB"
        placeholder="Message"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="sc-cUEOzv dyihBZ"
          id="message_FORM_ID"
          name="Message"
          value=""
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-jOiSOi iQYfvf"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <label
        class="sc-iTFTee cgVNkB"
        for="type_FORM_ID"
      >
        Type
      </label>
      <div
        class="sc-jcMfQk fEBFHo"
        placeholder="Type"
      >
        <div
          class="sc-gikAfH bJIepj"
        >
          <select
            aria-disabled="false"
            aria-invalid="false"
            class="sc-dPWrhe eAUyOZ"
            id="type_FORM_ID"
            name="Type"
          >
            <option
              value="success"
            >
              Success (green)
            </option>
            <option
              value="warn"
            >
              Warning (orange)
            </option>
            <option
              value="error"
            >
              Error (red)
            </option>
          </select>
          <svg
            class="sc-gKPRtg eSdzmv sc-jOiSOi iQYfvf"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
        </div>
      </div>
      <button
        class="sc-dmctIk cEWxAH sc-gYbzsP kpPKyE"
        type="button"
      >
        <span
          class="sc-fLcnxK fqTbAl"
        >
          Create notification
        </span>
      </button>
    </div>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload notifications
      </span>
    </button>
    <div
      class="stackstyles__StyledVStack-sc-1m733wj-0 gmJrze"
    />
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-cwSeag boZJxr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      aria-label="Loading"
      class="sc-cwSeag fkzJbZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
      width="default"
    >
      <div
        class="sc-bjfHbI ibzWhy"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI jVoIxg"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI jVoIxg"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI jVoIxg"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-bjfHbI jVoIxg"
        style="margin-top: 1.2rem;"
      >
        <div
          class="sc-idXgbr jlSlT"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with loadError 1`] = `
<div>
  <div
    class="sc-cwSeag boZJxr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div>
      <div
        class="sc-bqWxrE VcTDu"
      >
        <div
          class="sc-kDvujY bJLGdG"
        >
          <a
            class="sc-iBYQkv jNlLug"
            href="/admin"
          >
            ⇠ Admin
          </a>
        </div>
      </div>
      <div
        class="sc-bqWxrE VcTDu"
      >
        <h1
          class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
        >
          Admin notifications
        </h1>
      </div>
    </div>
    <div
      class="sc-hhOBVt"
    >
      <label
        class="sc-iTFTee cgVNkB"
        for="message_FORM_ID"
      >
        Message
      </label>
      <div
        class="sc-gikAfH bJIepj sc-cCjUiG elKIjB"
        placeholder="Message"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="sc-cUEOzv dyihBZ"
          id="message_FORM_ID"
          name="Message"
          value=""
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-jOiSOi iQYfvf"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <label
        class="sc-iTFTee cgVNkB"
        for="type_FORM_ID"
      >
        Type
      </label>
      <div
        class="sc-jcMfQk fEBFHo"
        placeholder="Type"
      >
        <div
          class="sc-gikAfH bJIepj"
        >
          <select
            aria-disabled="false"
            aria-invalid="false"
            class="sc-cOxWqc gMZzuE"
            id="type_FORM_ID"
            name="Type"
          >
            <option
              value="success"
            >
              Success (green)
            </option>
            <option
              value="warn"
            >
              Warning (orange)
            </option>
            <option
              value="error"
            >
              Error (red)
            </option>
          </select>
          <svg
            class="sc-gKPRtg eSdzmv sc-jOiSOi iQYfvf"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
        </div>
      </div>
      <button
        class="sc-dmctIk cEWxAH sc-gYbzsP kpPKyE"
        type="button"
      >
        <span
          class="sc-fLcnxK fqTbAl"
        >
          Create notification
        </span>
      </button>
    </div>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload notifications
      </span>
    </button>
    <div
      class="stackstyles__StyledVStack-sc-1m733wj-0 gmJrze"
    >
      <span
        class="sc-iveFHk fkKcvp"
      >
        <span
          class="sc-lllmON ikLYei"
        >
          Could not load notifications
          <br />
          Something went wrong
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with loading=true 1`] = `
<div>
  <div
    class="sc-cwSeag boZJxr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div>
      <div
        class="sc-bqWxrE VcTDu"
      >
        <div
          class="sc-kDvujY bJLGdG"
        >
          <a
            class="sc-iBYQkv jNlLug"
            href="/admin"
          >
            ⇠ Admin
          </a>
        </div>
      </div>
      <div
        class="sc-bqWxrE VcTDu"
      >
        <h1
          class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
        >
          Admin notifications
        </h1>
      </div>
    </div>
    <div
      class="sc-hhOBVt"
    >
      <label
        class="sc-iTFTee cgVNkB"
        for="message_FORM_ID"
      >
        Message
      </label>
      <div
        class="sc-gikAfH bJIepj sc-cCjUiG elKIjB"
        placeholder="Message"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="sc-cUEOzv dyihBZ"
          id="message_FORM_ID"
          name="Message"
          value=""
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-jOiSOi iQYfvf"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <label
        class="sc-iTFTee cgVNkB"
        for="type_FORM_ID"
      >
        Type
      </label>
      <div
        class="sc-jcMfQk fEBFHo"
        placeholder="Type"
      >
        <div
          class="sc-gikAfH bJIepj"
        >
          <select
            aria-disabled="false"
            aria-invalid="false"
            class="sc-bCfvAP iRwCjB"
            id="type_FORM_ID"
            name="Type"
          >
            <option
              value="success"
            >
              Success (green)
            </option>
            <option
              value="warn"
            >
              Warning (orange)
            </option>
            <option
              value="error"
            >
              Error (red)
            </option>
          </select>
          <svg
            class="sc-gKPRtg eSdzmv sc-jOiSOi iQYfvf"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
        </div>
      </div>
      <button
        class="sc-dmctIk cEWxAH sc-gYbzsP kpPKyE"
        type="button"
      >
        <span
          class="sc-fLcnxK fqTbAl"
        >
          Create notification
        </span>
      </button>
    </div>
    <button
      class="sc-dmctIk kcMKQX outer"
      disabled=""
      type="button"
    >
      <span
        class="sc-fLcnxK gaAjG"
      >
        Reload notifications
      </span>
      <div
        aria-hidden="true"
        class="sc-bBABsx kWWQKm"
      >
        <div
          class="sc-dIfARi hGlUnw"
        >
          <div
            class="sc-hHTYSt kKPHak"
          />
          <div
            class="sc-hHTYSt intAUs"
          />
          <div
            class="sc-hHTYSt fkjyfb"
          />
          <div
            class="sc-hHTYSt bGhnZe"
          />
          <div
            class="sc-hHTYSt iMblJ"
          />
          <div
            class="sc-hHTYSt ihXoZg"
          />
          <div
            class="sc-hHTYSt cLLCzE"
          />
          <div
            class="sc-hHTYSt bYMKzs"
          />
        </div>
      </div>
    </button>
    <div
      class="stackstyles__StyledVStack-sc-1m733wj-0 gmJrze"
    />
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with notifications 1`] = `
<div>
  <div
    class="sc-cwSeag boZJxr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div>
      <div
        class="sc-bqWxrE VcTDu"
      >
        <div
          class="sc-kDvujY bJLGdG"
        >
          <a
            class="sc-iBYQkv jNlLug"
            href="/admin"
          >
            ⇠ Admin
          </a>
        </div>
      </div>
      <div
        class="sc-bqWxrE VcTDu"
      >
        <h1
          class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
        >
          Admin notifications
        </h1>
      </div>
    </div>
    <div
      class="sc-hhOBVt"
    >
      <label
        class="sc-iTFTee cgVNkB"
        for="message_FORM_ID"
      >
        Message
      </label>
      <div
        class="sc-gikAfH bJIepj sc-cCjUiG elKIjB"
        placeholder="Message"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="sc-cUEOzv dyihBZ"
          id="message_FORM_ID"
          name="Message"
          value=""
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-jOiSOi iQYfvf"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <label
        class="sc-iTFTee cgVNkB"
        for="type_FORM_ID"
      >
        Type
      </label>
      <div
        class="sc-jcMfQk fEBFHo"
        placeholder="Type"
      >
        <div
          class="sc-gikAfH bJIepj"
        >
          <select
            aria-disabled="false"
            aria-invalid="false"
            class="sc-AHaJN egZAMl"
            id="type_FORM_ID"
            name="Type"
          >
            <option
              value="success"
            >
              Success (green)
            </option>
            <option
              value="warn"
            >
              Warning (orange)
            </option>
            <option
              value="error"
            >
              Error (red)
            </option>
          </select>
          <svg
            class="sc-gKPRtg eSdzmv sc-jOiSOi iQYfvf"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
            />
          </svg>
        </div>
      </div>
      <button
        class="sc-dmctIk cEWxAH sc-gYbzsP kpPKyE"
        type="button"
      >
        <span
          class="sc-fLcnxK fqTbAl"
        >
          Create notification
        </span>
      </button>
    </div>
    <button
      class="sc-dmctIk cEWxAH outer"
      type="button"
    >
      <span
        class="sc-fLcnxK fqTbAl"
      >
        Reload notifications
      </span>
    </button>
    <div
      class="stackstyles__StyledVStack-sc-1m733wj-0 gmJrze"
    >
      <div>
        <div
          class="sc-iJnaPW fynLNW"
          type="success"
        >
          message1
        </div>
        <button
          class="sc-dmctIk hJEtNq outer"
          type="button"
        >
          <span
            class="sc-fLcnxK fqTbAl"
          >
            Remove
          </span>
        </button>
      </div>
      <div>
        <div
          class="sc-iJnaPW liEejZ"
          type="warn"
        >
          message2
        </div>
        <button
          class="sc-dmctIk hJEtNq outer"
          type="button"
        >
          <span
            class="sc-fLcnxK fqTbAl"
          >
            Remove
          </span>
        </button>
      </div>
      <div>
        <div
          class="sc-iJnaPW duutDj"
          type="error"
        >
          message3
        </div>
        <button
          class="sc-dmctIk hJEtNq outer"
          type="button"
        >
          <span
            class="sc-fLcnxK fqTbAl"
          >
            Remove
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNotifications /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-cwSeag boZJxr page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-ksBlkl gDlyuV"
    >
      <h1
        class="sc-gswNZR gzqAHo sc-fEXmlR cIHzsJ"
        id="admin-only"
      >
        Admin only
      </h1>
      <span
        class="sc-iveFHk fkKcvp"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <a
          class="sc-iBYQkv jNlLug"
          href="/login"
        >
          Got a different admin account? Log in here.
        </a>
      </span>
    </div>
  </div>
</div>
`;
